@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 1.0.27  unreleased
 
+* swicth from 'twitter-bootstrap-rails' to 'bootstrap-sass'
 * 'application.css' renamed as 'application.css.scss'
 * update gem 'factory_girl_rails' from 1.3.0 to 1.4.0
 
